<resources>
    <string name="app_name">Location Reminders</string>
    <string name="error_happened">Error happened</string>
    <string name="retry">Retry</string>
    <string name="no_data">No reminders data\n\nTry to add some reminder.</string>
    <string name="reminder_title">Reminder Title</string>
    <string name="reminder_desc">Description</string>
    <string name="reminder_location">Reminder Location</string>
    <string name="save">Save</string>
    <string name="reminder_saved">Reminder Saved !</string>
    <string name="logout">Logout</string>
    <string name="logout_confirmation_message">Do you really want to logout?</string>
    <string name="welcome_to_the_location_reminder_app">Location Reminder</string>
    <string name="welcome_message_caption">Set your mind free to what matters most and do the things at the right time and place.</string>
    <string name="login">Login</string>
    <string name="title_activity_maps">Map</string>
    <string name="normal_map">Normal Map</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="satellite_map">Satellite Map</string>
    <string name="terrain_map">Terrain Map</string>
    <string name="lat_long_snippet">Lat: %1$.5f, Long: %2$.5f</string>
    <string name="dropped_pin">Set a reminder for this place</string>
    <string name="poi">poi</string>
    <string name="location_required_error">Location services must be enabled to use the app</string>
    <string name="location_permission_allowed">Nice! Location permission allowed.</string>
    <string name="permission_denied_explanation">You need to grant location permission in order to select the location.</string>
    <string name="settings">Settings</string>
    <string name="select_poi">Please select a point of interest</string>
    <string name="geofence_entered">Geofence Entered</string>
    <string name="channel_name">GeofenceStatus</string>
    <string name="notification_channel_description">Geofence status notification</string>
    <string name="content_text">Location Reminder</string>
    <string name="select_title">Please select title</string>
    <string name="select_location">Please select location</string>
    <string name="action_select_location">Select location</string>
    <string name="action_set_location">Set location</string>
    <string name="action_selected_location">Selected location</string>
    <string name="geofences_not_added">Problem in adding geofences.</string>
    <string name="welcome">Welcome</string>
    <string name="err_enter_title">Please enter title</string>
    <string name="err_select_location">Please select location</string>

    <!-- Error strings -->
    <string name="geofence_unknown_error">Unknown error: the Geofence service is not available now.</string>
    <string name="geofence_not_available">Geofence service is not available now. Go to Settings>Location>Mode and choose High accuracy.</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences.</string>
    <string name="geofence_too_many_pending_intents">You have provided too many PendingIntents to the addGeofences() call.</string>
    <string name="error_adding_geofence">Error Happened, Can\'t Add Geofence</string>
    <string name="text_login">Login</string>
    <string name="url_terms_of_service">https://jesselima.dev/apps/location-reminder/terms-of-service</string>
    <string name="url_privacy_policy">https://jesselima.dev/apps/location-reminder/privacy-policy</string>
    <string name="auth_error_not_network">Please, check your net work connection.</string>
    <string name="auth_error_something_went_wrong">Oooops! Something went wrong!</string>
    <string name="auth_error_must_update_google_services">Please, update your google services to be able to proceed.</string>
    <string name="auth_error_account_disable">The user account has been disabled by an administrator.</string>
    <string name="auth_error_email_does_not_match_provided">You are attempting to sign in a different email than previously provided</string>
    <string name="auth_error_email_mismatch">You are attempting to sign in a different email than previously provided</string>
    <string name="auth_error_invalid_email_link">You are attempting to sign in with an invalid email link</string>
    <string name="auth_error_please_enter_email">Please enter your email to continue signing in</string>
    <string name="auth_error_wrong_device">You must open the email link on the same device.</string>
    <string name="auth_error_define_linking_or_sign_in">You must determine if you want to continue linking or complete the sign in</string>
    <string name="auth_error_session_expired_or_cleared">The session associated with this sign-in request has either expired or was cleared</string>
    <string name="add_new_reminder">New reminder</string>
    <string name="title_activity_on_boarding">OnBoardingActivity</string>

    <string name="content_description_save_reminder">Save reminder</string>
    <string name="label_copyright">Copyrights</string>
    <string name="label_source">Source</string>
    <string name="label_link">LINK</string>
    <string name="label_author">Author</string>

    <string name="label_cancel">Cancel</string>
    <string name="attention">Attention</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="label_ok_got_it">OK, got it!</string>

    <string name="image_or_animation_resource">Image or animation resource</string>
    <string name="label_go_back_to_reminders">Go back to reminders</string>
    <string name="message_copyright_notes">See below who\nprovided free content used in this App.</string>
    <string name="label_success">Success</string>
    <string name="onboard_step_1_title">Need remember something?</string>
    <string name="onboard_step_1_description">Have you forgot to do something while you was in some place?</string>
    <string name="onboard_step_2_title">No worries!</string>
    <string name="onboard_step_2_description">Here you can select a location and save your reminder.</string>
    <string name="onboard_step_3_title">And get notified when you are in place.</string>
    <string name="onboard_step_3_description">Now you can save you reminders location based and get notified when you get into or leave the place!</string>
    <string name="next">Next</string>
    <string name="start">Start</string>

    <string name="map_local_style_dark">Style Dark</string>
    <string name="map_local_style_night">Style Night</string>
    <string name="map_local_style_night_highway_highlighted">Night yellow highway</string>
    <string name="map_local_style_standard_highway_highlighted">Day blue highway</string>
</resources>
